# yunduan

./: .gitignore  MainPagePrototype.qml  STM32MP157DAA1工业缺陷检测系统综合方案.md  工业缺陷检测系统完整方案.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260420_0001_init_schema.py  20260420_0002_ai_provider_configs.py  20260420_0003_detection_record_contexts.py  20260421_0004_auth_security_fields.py  20260421_0005_user_ai_permission.py  20260421_0006_multitenant_companies.py  20260421_0007_repair_company_scoped_unique_indexes.py  20260421_0008_user_password_change_requests.py  20260421_0009_device_default_mp157.py  20260421_0010_openclaudecode_micuapi_urls.py
backend/src/: __init__.py  app.py
backend/src/api/: __init__.py  deps.py  public_app_url.py  router.py
backend/src/core/: config.py  errors.py  logging.py  secret_cipher.py  security.py  sse.py
backend/src/db/: base.py  session.py
backend/src/integrations/: __init__.py  ai_model_discovery_client.py  ai_review_client.py  cos_client.py  password_reset_mailer.py
backend/src/repositories/: __init__.py  ai_gateway_repository.py  ai_model_profile_repository.py  company_repository.py  detection_record_repository.py  (+4 more)
backend/tests/: test_ai_model_discovery_client.py  test_ai_review_client.py  test_app.py  test_auth_service.py  test_detection_record_model.py  test_device_service.py  test_part_service.py  test_password_reset_mailer.py  test_record_service.py  test_secret_cipher.py  test_statistics_export_service.py  test_system_user_service.py
(+155 files in other folders)
